ci: Add @DiegoOLiveira-dev no CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,4 @@
 # https://help.github.com/articles/about-codeowners/
 
 # Default owners for everything in the repo
-*       @dannevesdantas @joao0812 @RafaelFerSilva @anaplopes
+*       @dannevesdantas @joao0812 @RafaelFerSilva @anaplopes @DiegoOLiveira-dev
